# Django-app

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: orders-data.json  products-data.json
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: blogapp_seed_data.py
mysite/blogapp/migrations/: 0001_initial.py  0002_remove_article_content_remove_article_pub_date_and_more.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about_me.html  avatar_update.html  base.html  register.html  user_profile.html  user_update.html  users_list.html
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py  widgets.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0007_alter_product_options_alter_product_discount_and_more.py  0008_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_order_options_alter_product_options.py  0013_alter_order_options_alter_product_options_and_more.py  0014_alter_order_options_alter_product_options.py
nginx/: nginx.conf
(+18 files in other folders)
